# haskell-textbook-parser

./: LICENSE  README.md  lab3.cabal
app/: Main.hs  Parse.hs  Words.hs
src/: Arranger.hs  Reader.hs  View.hs
src/Parsing/: Data.hs  Parser.hs
src/Parsing/Extractors/: Endline.hs  Number.hs  Punctuation.hs  SequenceGeneric.hs  SymbolGeneric.hs  Whitespace.hs  Word.hs
src/parser/: Parser.hs
src/res/: book.txt  short_book.txt
test/: Spec.hs  TestReader.hs
test/Parsing/: TestExtractToken.hs  TestExtractWord.hs
test/Parsing/Extractors/: TestExtractPunctuation.hs  TestExtractSequence.hs  TestExtractWhitespace.hs  TestExtractWord.hs
test/res/: ukr_example.txt
