cabal-version:      3.0
name:               lab3
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE

author:             Yaroslav Vorobiov
maintainer:         yaroslawliker@gmail.com

category:           Text
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library textBookParser
  hs-source-dirs:      src
  exposed-modules:     Reader, 
                       Parsing.Data,
                       Parsing.Parser,
                       Parsing.Extractors.SymbolGeneric,
                       Parsing.Extractors.SequenceGeneric,
                       Parsing.Extractors.Word,
                       Parsing.Extractors.Punctuation,
                       

  build-depends:       base,
                       text,
  default-language:    Haskell2010

executable lab3
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      text,
                      pretty-simple,
                      textBookParser                      

    hs-source-dirs:   app
    default-language: Haskell2010
    
test-suite tests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    other-modules:       TestReader,
                         Parsing.Extractors.TestExtractSequence,
                         Parsing.TestExtractToken,
                         Parsing.Extractors.TestExtractWord,
                         Parsing.Extractors.TestExtractPunctuation
                         
    build-depends:       base,
                         text,
                         HUnit,
                         textBookParser
